fix(user): fix user and project detail
